WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282721
maps.google.com: [iPad] unable to scroll on google maps print page
https://bugs.webkit.org/show_bug.cgi?id=282721
Summary
maps.google.com: [iPad] unable to scroll on google maps print page
Jessica Cheung
Reported
2024-11-06 15:12:05 PST
rdar://67358928
Attachments
Add attachment
proposed patch, testcase, etc.
Jessica Cheung
Comment 1
2024-11-07 20:51:20 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36373
EWS
Comment 2
2024-11-11 15:03:03 PST
Committed
286455@main
(5988703a14ec): <
https://commits.webkit.org/286455@main
> Reviewed commits have been landed. Closing PR #36373 and removing active labels.
EWS
Comment 3
2024-11-19 14:21:50 PST
Committed
283286.499@safari-7620-branch
(e5527295dcd7): <
https://commits.webkit.org/283286.499@safari-7620-branch
> Reviewed commits have been landed. Closing PR #2306 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug