Source/WebCore/page/Quirks.h
@@ -112,6 +112,7 @@ public:
     bool needsFullscreenDisplayNoneQuirk() const;
     bool needsFullscreenObjectFitQuirk() const;
     bool needsWeChatScrollingQuirk() const;
+    bool needsGoogleMapsScrollingQuirk() const;
 
     bool needsPrimeVideoUserSelectNoneQuirk() const;
 
@@ -239,9 +240,7 @@ private:
     bool isYahooMail() const;
 
     bool isAmazon() const;
-#if ENABLE(TOUCH_EVENTS)
     bool isGoogleMaps() const;
-#endif
 
     RefPtr<Document> protectedDocument() const;
 
@@ -260,6 +259,7 @@ private:
     mutable std::optional<bool> m_needsFullscreenObjectFitQuirk;
     mutable std::optional<bool> m_shouldAvoidPastingImagesAsWebContent;
     mutable std::optional<bool> m_mayNeedToIgnoreContentObservation;
+    mutable std::optional<bool> m_needsGoogleMapsScrollingQuirk;
 #endif
 #if ENABLE(TOUCH_EVENTS)
     enum class ShouldDispatchSimulatedMouseEvents : uint8_t {
